testsuite/positive/denormalized-generic-constraints-2.n
using System;
module Program
{
  Main() : void
  {
    _ = Testing();
    Console.Write("OK");
  }
}
/*
REFERENCE: denormalized-generic-constraints-1
 
BEGIN-OUTPUT
OK
END-OUTPUT
*/
