testsuite/negative/Issue-git-0514.n
module Program
{
  Main() : void
  {
    _ = array(); //E:invalid empty array initializer, please specify size for each dimension
  }
}